# MaCh3

./: CMakeLists.txt  README.md  setup.sh
OscClass/: OscClass_CUDAProb3.cpp  OscClass_CUDAProb3.h
covariance/: covarianceBase.h  covarianceOsc.cpp  covarianceXsec.cpp  covarianceXsec.h
manager/: manager.cpp  manager.h
mcmc/: CMakeLists.txt  SampleSummary.cpp  SampleSummary.h  mcmc.cpp
samplePDF/: CMakeLists.txt  NDMCStruct.cpp  NDMCStruct.h  Selection.cpp  Selection.h  Structs.cpp  Structs.h  XsecParam.h  samplePDFBase.cpp  samplePDFBase.h  samplePDFFDBase.cpp  samplePDFFDBase.h  samplePDFND.cpp  samplePDFND.h
splines/: CMakeLists.txt  SplineMonolith.cpp  SplineMonolith.h  gpuSplineUtils.cu  splineFDBase.cpp
throwParms/: ThrowParms.h
